--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -2,40 +2,67 @@
 
 * {
     margin:0;
-    padding: o;
+    padding: 0;
     border: none;
-    background-color: aquamarine;
+    
     
 }
 body{
     font-family: Montserrat, sans-serif;
     font-weight: 300;
 }
-.wrapper{
-    width:1170px;
-    margin:auto;
+.container{
+    position: relative;
 }
 
 /* synergia-logo-image */
 
-synergia-logo {
+.synergia-logo {
 
-weight: 100%;
-height: 200px;
-float: left;
-
+weight: 200px;
+height: 150px;
+float: right;
+position: absolute;
+top: 2px;
+right: 9px;
+display:flex;
 }
+
 
 /* solar-image */
 
 .solar-image{
-weight: 100%;
-height: 500px;
-size: 100vh;
+height: 80vh;
+max-width: 100%;
 background-image: url('../images/man-worker-firld-by-solar-panels.freepik.com.jpg');
 background-size: cover;
-background-image: center, center;
+background-image: center, center; 
 position: relative;
+
 }
 
+.nav-area{
+    
+list-style: none;
+position: absolute;
+top: 8px;
+left: 60px;
+font-size: 40px;
+letter-spacing: 8px;
+    
+}
+.nav-area li{
+    display: inline-block;
+}
+.nav-area li a {
+    color:black;
+    text-decoration: none;
+    padding: 5px, 20px;
+    font-size: 15px;
+}
+.nav-area li a:hover{
+    
+    color: #333;
+    border-bottom: 1px solid #3a3a3a;
+}
 
