--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -19,10 +19,10 @@ body{
 .synergia-logo {
 
 width: 100px;
-height: 200px;
+height: 70px;
 float: right;
 position: absolute;
-bottom: 345px;
+bottom: 430px;
 right: 120px;
 display: flex;
 }
@@ -99,4 +99,45 @@ color:#190b0b;
     position: absolute;
 
 }
+
+/* photovoltaic */
+
+#explanation {
+    background-color: rgba(230, 233, 242, 0.4);
+    width: 500px;
+    border-radius:25px;
+    padding: 30px;
+    margin: 20px;
+    float: left;
+   
+}
+
+#explanation p {
+text-align: justify;
+vertical-align: middle;}
+
+/* photovoltaic-system img */
+
+#photovoltaic-system{
+
+padding: 20px;
+padding-left: 770px;
+width: 100%;
+height: 400px;
+background-repeat: no-repeat;
+background-size: contain;
+display: flex;
+gap: 50px;
+
+
+}
+
+
+/* images-gallery */
+
+#images-gallery{
+    display: grid;
+    grid-gap: .5em;
+}
+
 
