Add styling to contact page, add header to contact and galley page

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,41 +1,98 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300&family=Montserrat:wght@300&display=swap');
 
 * {
-    margin:0;
+    margin: 0;
     padding: 0;
-    border: none;
-    
-    
+    border: none;  
+    box-sizing: border-box;
 }
 body{
     font-family: Montserrat, sans-serif;
     font-weight: 300;
 }
 .container{
-    position: relative;
+    
+    height: 100vw;
+    width: auto;
+    margin: 0;
+    display: grid;
+    background-color: whitesmoke;
+    grid-template-columns:[col-start]1fr [col-end]1fr;
+    grid-template-rows: 6% 30% 20% 30%;
+    grid-template-areas: 
+    "header header"
+    "photo photo"
+    "main-one main-two"
+    "main-three main-four"
+    "footer footer"
+    ;
+    grid-column-gap:10px;
+   
+  
+   
+}
+.hearder {
+    grid-area: header;
+    background-color: whitesmoke;
+    grid-template-columns: repeat(2, 1fr);
+    display: grid;
+    height: 90px;
+    width: 100%;
 }
 
 /* synergia-logo-image */
 .synergia-logo {
 
-width: 100px;
-height: 70px;
-float: right;
-position: absolute;
-bottom: 430px;
-right: 120px;
-display: flex;
+    width: 100px;
+    height: 70px;
+    float: right;
+    bottom: 430px;
+    left: 610px;
+    top:12px;
+    display: flex;
+    line-height: 75px;
+    position: relative;
+    }
+  
+    
+
+.photo{
+
+    grid-area: photo;
+    background: url('../images/man-worker-firld-by-solar-panels.freepik.com.jpg') no-repeat center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    overflow: hidden;}
+ 
+
+.main-one{
+    grid-area: main-one;
+    background-color: aqua;
 }
-.synergia-logo .solar-image {
-line-height: 75px;
+.main-two{
+    grid-area: main-two;
+    background-color: rgb(167, 228, 75);
 }
+.main-three{
+    grid-area: main-three;
+    background-color: rgb(227, 135, 23);
+}
+.main-four{
+    grid-area: main-four;
+}
+.footer{
+    grid-area: footer;
+}
+
+
 
 /* solar-image */
 
 .solar-image{
 height: 80vh;
 max-width: 100%;
-background-image: url('../images/man-worker-firld-by-solar-panels.freepik.com.jpg');
 background-size: cover;
 background-image: center, center; 
 position: relative;
@@ -67,6 +124,8 @@ letter-spacing: 8px;
     color: #333;
     border-bottom: 1px solid #3a3a3a;
 }
+
+
 
 /* Welcome-text */
 
@@ -107,7 +166,6 @@ color:#190b0b;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 50px;
-
     background-color: rgba(230, 233, 242, 0.4);
     width: 600px;
     border-radius:25px;
@@ -134,20 +192,30 @@ background-repeat: no-repeat;
 background-size: contain;
 display: flex;
 gap: 50px;
-
-
 }
 
+
+.gallery-text{
+
+top: 8px;
+left: 60px;
+font-size: 18px;
+letter-spacing: 3px;
+text-align: justify;
+padding: 35px;
+background-color: rgba(230, 233, 242, 0.4);
+
+}
 
 /* images-gallery */
 
 #images-gallery {
    
 
-    --gap: 20px;
+    --gap: 30px;
     --num-cols: 2;
     --row-height: 300px;
-
+    top: 100px;
     box-sizing: border-box;
     background: #f0f0f0;
     padding: var(--gap);
@@ -178,3 +246,109 @@ gap: 50px;
     --row-height: 200px;
 
 }}
+
+/* footer */
+
+footer {
+    height: 100px;
+}
+
+.social-networks {
+    text-align: center;
+}
+
+.social-networks > li {
+    display: inline;
+}
+
+.social-networks i {
+    font-size: 160%;
+    margin: 1%;
+    padding: 5%;
+    color: #3a3a3a;
+}
+
+.bacground-image
+{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 700px;
+    overflow: hidden;
+}
+
+/* Contact page */
+
+.contact{
+    position: relative;
+    min-height: 100vh;
+    padding: 50px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image: url('../images/solar-cell-mage\ by\ Bruno\ Germany\ from\ Pixabay.jpg');
+    background-size: cover;
+}
+
+.contact .content{
+
+    max-width: 800px;
+    text-align: center;
+
+}
+.contact .content h2 {
+    
+    font-size: 40px;
+    font-weight: 500;
+    color:white;
+}
+.contact .content p{
+    font-size: 20px;
+    font-weight: 500;
+    color:white;
+} 
+
+.case {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    color:white;
+}
+
+.case .contactInfo{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.case .contactInfo .box{
+    position: relative;
+    padding: 20px 0;
+    display: flex;
+}
+
+.case .contactInfo .box .icon{
+
+    min-width: 60px;
+    height: 60px;
+    background: #b1abab;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 22px;
+}
+
+.case .contactInfo .box .text{
+    display: flex;
+    margin-left: 20px;
+    font-size: 16px;
+    flex-direction: column;
+
+
+}
