--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -288,7 +288,7 @@ footer {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: url('../images/solar-cell-mage\ by\ Bruno\ Germany\ from\ Pixabay.jpg');
+    background-image: url('../images/pixabay\ 4.jpg');
     background-size: cover;
 }
 
@@ -344,11 +344,54 @@ footer {
     font-size: 22px;
 }
 
-.case .contactInfo .box .text{
+.case .contactInfo .box .text
+{
     display: flex;
     margin-left: 20px;
     font-size: 16px;
     flex-direction: column;
+}
 
+.case .contactInfo .box .text h3{
+    font-weight: 600;
+    color:cornflowerblue
+}
+.contactForm
+{
+    width: 40%;
+    padding: 40px;
+    background:  rgba(230, 233, 242, 0.4);
+    border-radius: 5px;
+    
 
 }
+.contactForm h2{
+    font-size: 30px;
+    font-weight: 500;
+}
+.contactForm .inputBox
+{
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+
+}
+.contactForm .inputBox input,
+.contactForm .inputBox input textarea{
+
+    width: 100%;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    border: none;
+    outline: none;
+    resize: none;
+
+}
+
+.contactForm .inputBox span{
+    
+}
+
+
+
