--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -5,11 +5,12 @@
 
 
 
-* {
+*{
     margin: 0;
     padding: 0;
-  
+    box-sizing: border-box;
 }
+
 body{
     font-family: Montserrat, sans-serif;
     font-weight: 300;
@@ -60,42 +61,6 @@ font-size: 50%;
         
 }
 
-/* dropdown_menu */
-
-.dropdown_menu {
-    display: none;
-}
-.dropdown_menu{
-
-    display: block;
-    position: absolute;
-    left:0;
-    background-color: azure;
-    padding: 0 14px;
-    max-height: 70px;
-   
-}
-.dropdown_menu ul{
-    display: block;
-    position:absolute;
-    background-color: white;
-    padding: 10px;
-}
-.dropdown_menu ul li{
-    width: 150px;
-}
-
-nav ul li ul li a:hover{
-     background-color: aqua;
-     padding:2px 10px;
-
-     display: inline-block;
-     text-decoration: none;
-     padding: 15px 30px;
-     position: relative;
-     cursor: pointer;
-    
-}
     
 /* logo-image */
 .logo {
@@ -350,41 +315,55 @@ nav ul li ul li a:hover{
 
 /* footer */
 
-footer {
-    height: 100px;
+footer{
+
+
+width: 100%;
+background: rgb(208, 198, 198);
+height: 450px;
+text-align: left;
+
 }
 
-.social-networks {
+.main_content{
+  padding-left: 20px;  
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+.left_box{
+
+    width:80%;
+    margin: auto;
     text-align: center;
+    padding-top: 20px;
+    
+
+}
+.main_content h2{
+
+    font-size: 25px;
+    font-weight: 300px;
+    padding-top: 20px;
+    color: #0caaa5;
 }
 
-.social-networks > li {
-    display: inline;
+.main_content p{
+ font-size: 20px;
+ font-weight: 300;
+ line-height: 22px;
+ padding: 10px;
+ text-align: justify;
+
 }
 
-.social-networks i {
-    font-size: 160%;
-    margin: 1%;
-    padding: 5%;
-    color: #3a3a3a;
-}
-
-.bacground-image
-{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 700px;
-    overflow: hidden;
-}
 
 /* Contact page */
 
 .contact{
  
     min-height: 100vh;
-    padding: 50px 100px;
+    padding: 1px 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -423,13 +402,14 @@ footer {
 
 }
 .contactForm h2{
+    
     font-size: 30px;
     font-weight: 500;
     text-align: center;
 }
 .contactForm .inputBox
 {
-    position: relative;
+    
     width: 100%;
     margin-top: 10px;
 
@@ -456,48 +436,8 @@ footer {
     cursor: pointer;
     padding: 12px;}
 
-/* Footer contact page */
-
- #down{
-    height: 100px;
-}
-
-.personal_info{
-    background: #b1abab;
-    text-align: left;
-    width: 100%;
-    
-}
-
-.personal_info h3{
-
-    color: rgb(31, 113, 137);
-    font-size: 22px;
-}
-
-.personal_info h3 .InfoBox div{
-
-    display: flex;
-    display: inline;
-}
-
-.personal_info .InfoBox{
 
 
-    display: flex;
-    margin-top: 0;
-    margin-left: 40px;
-    padding-bottom: 40px;
-    padding-top: 40px;
-}
-
-.personal_info span {
-    font-size: 160%;
-    margin: auto;
-    padding: 10px 30px;
-    color: #3a3a3a;}
-
-    
 @media (max-width:991px)
 
 {.contact
@@ -510,16 +450,4 @@ footer {
 
 .contactForm
 {width: 100%;}
-}
-
-/* map */
-
-.map{
-    width: 500px;
-    height: auto;
-    display: flex;
-    justify-content: right;
-    padding-right: 5%;
-   
-
 }
